[package]
name = "general_pub_sub"
version = "0.0.6"
authors = ["Dustin Ewan <dustineewan@gmail.com>"]
edition = "2018"
repository = "https://github.com/DustinEwan/rust-general_pub_sub"
license = "GPL-3.0-or-later"
description = "A general use, fast, and flexible PubSub implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
wildmatch = "2.1.0"
